--- a/src/layouts/Footer/Footer.scss
+++ b/src/layouts/Footer/Footer.scss
@@ -1,32 +1,26 @@
 .footer {
-        align-items: stretch;
-        box-sizing: border-box;
+    box-sizing: border-box;
+    position: absolute;
+    bottom: 0;
+
+    &__container {
+        list-style: none;
         display: flex;
-        flex-direction: column;
-        flex-shrink: 0;
-        margin: 0;
-        padding: 0;
-        margin-top: 10%;
-        position: relative;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+        font-size: 9.5px;
+        color: #8e8e8e;
+        padding: 0px;
+    }
 
-        &__container {
-            margin: 5px 40px 30px;
-            padding: 13px;
-
-            &-links {
-                display: flex;
-                margin: 0px 48px 10px;
-                flex-wrap: nowrap;
-                align-items: center;
-                font-size: 9.5px;
-                white-space: nowrap;
-                color: 8e8e8e;
-                justify-Content: center;
-            }
-
-            &-link a {
-                text-decoration: none;
-                color: #DBDBDB;
-            }
+    &__container-link {
+        list-style: none;
+        padding: 5px;
+        a {
+            text-decoration: none;
+            color: #DBDBDB;
         }
+}
 }
